--- a/OnionAPI/Web.config
+++ b/OnionAPI/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301879.
   -->
 <configuration>
+  <connectionStrings>
+    <add name="MyContext" connectionString="Server=(localdb)\mssqllocaldb;Database=Test;Trusted_Connection=True;" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
