--- a/OnionAPI/Web.config
+++ b/OnionAPI/Web.config
@@ -4,6 +4,32 @@
   https://go.microsoft.com/fwlink/?LinkId=301879.
   -->
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />
+      <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source=" My Custom Api Services" />
+      <target name="database" type="Database" connectionString="Server=(localdb)\mssqllocaldb;Database=Test;Trusted_Connection=True;">
+        <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], [Controller], Exception, StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @Controller, @Exception, @StackTrace); </commandText>
+        <parameter name="@TimeStamp" layout="${date}" />
+        <parameter name="@Level" layout="${level}" />
+        <parameter name="@Logger" layout="${logger}" />
+        <parameter name="@Message" layout="${message}" />
+        <parameter name="@Controller" layout="${event-properties:controller}" />
+        <parameter name="@Exception" layout="${exception}" />
+        <parameter name="@StackTrace" layout="${stacktrace}" />
+        <dbProvider>System.Data.SqlClient</dbProvider>
+      </target>
+    </targets>
+    <rules>
+      <!--I am adding my 3 logging rules here-->
+      <logger name="*" minlevel="Debug" writeTo="database" />
+      <logger name="*" minlevel="Trace" writeTo="logfile" />
+      <logger name="*" minlevel="Trace" writeTo="eventlog" />
+    </rules>
+  </nlog>
   <connectionStrings>
     <add name="MyContext" connectionString="Server=(localdb)\mssqllocaldb;Database=Test;Trusted_Connection=True;" />
   </connectionStrings>
